# ms-office-file-generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-image.yml
design/: ADR-007-json-api-file-generation.md  ADR-010-resource-caps-hosted-generation.md  ADR-011-docs-github-pages.md  ADR-013-concurrency-cap-hosted-generation.md  ADR-015-screenshot-drift-precommit-guard.md  ADR-template.md  README.md
docs/: config-guide.md  index.md
scripts/: README.md  _common.sh  capture_screenshots.py  check_screenshot_drift.py  gen-deck.sh  gen-doc.sh  gen-fill.sh  gen-markdown.sh  gen-pdf.sh  gen-sheet.sh  run-all.sh
src/common_file_generator/: __init__.py  cli.py
src/common_file_generator/generators/: docx_theme.py
src/common_file_generator/web/: api.py  app.py  caps.py  schemas.py  server.py  service.py
src/common_file_generator/web/static/: style.css
src/common_file_generator/web/templates/: index.html
src/ms_office_file_generator/web/: api.py  app.py  schemas.py  service.py
tests/: test_api.py  test_caps.py  test_doc_generator.py  test_web.py
