[project]
name = "common-file-generator"
version = "0.1.0"
description = "Generator for test documents (PPTX/DOCX/XLSX/PDF/Markdown) by complexity-driven generation or Golden-file data injection"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = [
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
]
# Docs-site toolchain. Used only to build the GitHub Pages site in CI; kept out
# of `web` so it never enters the runtime container image.
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
generate = "common_file_generator.cli:main"
gen-ui = "common_file_generator.web.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common_file_generator"]
# Ship the web UI templates and vendored static assets in the wheel.
artifacts = [
    "src/common_file_generator/web/templates/**",
    "src/common_file_generator/web/static/**",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["common_file_generator"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
